<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the Status</string>
    <string name="no_internet">Connect to the internet</string>
    <string name="main_image_description">Download Image</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_radio_string">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_radio_string">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radio_string">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download_toast">Please select a file to download</string>
    <string name="notification_channel_description">Download status</string>
    <string name="download_channel_id">download_channel</string>
    <string name="download_channel_name">Downloads</string>
    <string name="status_string">Status:</string>
    <string name="filename_string">Filename:</string>
    <string name="detail_button_text">OK</string>

</resources>
